--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1>Hello World!</h1>
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem facilis neque possimus, voluptates adipisci sit tenetur reiciendis temporibus. A suscipit laudantium officiis debitis, veritatis eius adipisci illo voluptate mollitia?</p>
+
+<a href="https://google.com">Google</a>
