Aggiunge footer e modifica link Google

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat exercitationem facilis neque possimus, voluptates adipisci sit tenetur reiciendis temporibus. A suscipit laudantium officiis debitis, veritatis eius adipisci illo voluptate mollitia?</p>
 
-<a href="https://google.com">Google</a>
+<a href="https://google.com">Sito di Google</a>
+
+<footer>
+    <p>&copy; 2022</p>
+</footer>
